fix: button scrollbar overlap

--- a/src/components/reusable/codeView/blockCodeView/blockCodeView.scss
+++ b/src/components/reusable/codeView/blockCodeView/blockCodeView.scss
@@ -63,8 +63,8 @@ $shidoka-light-syntax-theme-background: #F9F9F9;
     }
 
     &__expand-button {
-        bottom: 12px;
-        right: 12px;
+        bottom: 16px;
+        right: 18px;
         transition: transform $transition-duration ease-in-out;
     }
 }
@@ -170,7 +170,7 @@ $shidoka-light-syntax-theme-background: #F9F9F9;
 
             .code-view__copy-button {
                 top: 16px;
-                right: 10px;
+                right: 16px;
             }
 
             .code-snippet-wrapper {
